--- a/projects.json
+++ b/projects.json
@@ -4,5 +4,6 @@
     "nibiru":"https://node101.io/testnet/nibiru.sh",
     "celestia":["https://node101.io/celestia/celestia_light.sh","https://node101.io/celestia/celestia_bridge.sh","https://node101.io/celestia/celestia_full.sh"],
     "sui":"https://node101.io/testnet/sui.sh",
-    "lava":"https://node101.io/testnet/lava.sh"
+    "lava":"https://node101.io/testnet/lava.sh",
+    "cosmoshub": "https://node101.io/mainnet/cosmoshub.sh"
 }
