--- a/projects.json
+++ b/projects.json
@@ -10,5 +10,6 @@
     "iris": "https://node101.io/mainnet/iris.sh",
     "sommelier": "https://node101.io/mainnet/sommelier.sh",
     "stride": "https://node101.io/mainnet/stride.sh",
-    "akash": "https://node101.io/mainnet/akash.sh"
+    "akash": "https://node101.io/mainnet/akash.sh",
+    "juno": "https://node101.io/mainnet/juno.sh"
 }
