assetmantle.sh added

--- a/projects.json
+++ b/projects.json
@@ -12,5 +12,6 @@
     "stride": "https://node101.io/mainnet/stride.sh",
     "akash": "https://node101.io/mainnet/akash.sh",
     "juno": "https://node101.io/mainnet/juno.sh",
-    "kujira": "https://node101.io/mainnet/kujira.sh"
+    "kujira": "https://node101.io/mainnet/kujira.sh",
+    "assetmantle": "https://node101.io/mainnet/assetmantle.sh"
 }
