--- a/projects.json
+++ b/projects.json
@@ -1,18 +1,22 @@
 {
-    "andromeda":"https://node101.io/testnet/babylon.sh",
+    "akash":"https://node101.io/mainnet/akash.sh",
+    "andromeda":"https://node101.io/testnet/andromeda.sh",
+    "assetmantle":"https://node101.io/mainnet/assetmantle.sh",
+    "axelar":"https://node101.io/mainnet/axelar.sh",
+    "canto":"https://node101.io/mainnet/assetmantle.sh",
+    "chihuahua":"https://node101.io/mainnet/chihuahua.sh",
+    "cosmoshub":"https://node101.io/mainnet/cosmoshub.sh",
+    "crescent":"https://node101.io/mainnet/crescent.sh",
+    "juno":["https://node101.io/mainnet/juno.sh","https://node101.io/testnet/juno.sh"],
     "babylon":"https://node101.io/testnet/babylon.sh",
     "nibiru":"https://node101.io/testnet/nibiru.sh",
     "celestia":["https://node101.io/celestia/celestia_light.sh","https://node101.io/celestia/celestia_bridge.sh","https://node101.io/celestia/celestia_full.sh"],
     "sui":"https://node101.io/testnet/sui.sh",
     "lava":"https://node101.io/testnet/lava.sh",
-    "cosmoshub": "https://node101.io/mainnet/cosmoshub.sh",
-    "osmosis": "https://node101.io/mainnet/osmosis.sh",
-    "iris": "https://node101.io/mainnet/iris.sh",
-    "sommelier": "https://node101.io/mainnet/sommelier.sh",
-    "stride": "https://node101.io/mainnet/stride.sh",
-    "akash": "https://node101.io/mainnet/akash.sh",
-    "juno": "https://node101.io/mainnet/juno.sh",
-    "kujira": "https://node101.io/mainnet/kujira.sh",
-    "assetmantle": "https://node101.io/mainnet/assetmantle.sh",
-    "quicksilver": "https://node101.io/mainnet/quicksilver.sh"
+    "osmosis":"https://node101.io/mainnet/osmosis.sh",
+    "iris":"https://node101.io/mainnet/iris.sh",
+    "sommelier":"https://node101.io/mainnet/sommelier.sh",
+    "stride":"https://node101.io/mainnet/stride.sh",
+    "kujira":"https://node101.io/mainnet/kujira.sh",
+    "quicksilver":"https://node101.io/mainnet/quicksilver.sh"
 }
