--- a/projects.json
+++ b/projects.json
@@ -1,22 +1,31 @@
 {
-    "akash":"https://node101.io/mainnet/akash.sh",
-    "andromeda":"https://node101.io/testnet/andromeda.sh",
-    "assetmantle":"https://node101.io/mainnet/assetmantle.sh",
-    "axelar":"https://node101.io/mainnet/axelar.sh",
-    "canto":"https://node101.io/mainnet/assetmantle.sh",
-    "chihuahua":"https://node101.io/mainnet/chihuahua.sh",
-    "cosmoshub":"https://node101.io/mainnet/cosmoshub.sh",
-    "crescent":"https://node101.io/mainnet/crescent.sh",
-    "juno":["https://node101.io/mainnet/juno.sh","https://node101.io/testnet/juno.sh"],
-    "babylon":"https://node101.io/testnet/babylon.sh",
-    "nibiru":"https://node101.io/testnet/nibiru.sh",
-    "celestia":["https://node101.io/celestia/celestia_light.sh","https://node101.io/celestia/celestia_bridge.sh","https://node101.io/celestia/celestia_full.sh"],
-    "sui":"https://node101.io/testnet/sui.sh",
-    "lava":"https://node101.io/testnet/lava.sh",
-    "osmosis":"https://node101.io/mainnet/osmosis.sh",
-    "iris":"https://node101.io/mainnet/iris.sh",
-    "sommelier":"https://node101.io/mainnet/sommelier.sh",
-    "stride":"https://node101.io/mainnet/stride.sh",
-    "kujira":"https://node101.io/mainnet/kujira.sh",
-    "quicksilver":"https://node101.io/mainnet/quicksilver.sh"
+    "testnets": {
+        "andromeda": "https://node101.io/testnet/andromeda.sh",
+        "juno": "https://node101.io/testnet/juno.sh",
+        "babylon": "https://node101.io/testnet/babylon.sh",
+        "nibiru": "https://node101.io/testnet/nibiru.sh",
+        "sui": "https://node101.io/testnet/sui.sh",
+        "lava": "https://node101.io/testnet/lava.sh",
+        "celestia": [
+            "https://node101.io/celestia/celestia_light.sh",
+            "https://node101.io/celestia/celestia_bridge.sh",
+            "https://node101.io/celestia/celestia_full.sh"
+        ]
+    },
+    "mainnets": {
+        "akash": "https://node101.io/mainnet/akash.sh",
+        "assetmantle": "https://node101.io/mainnet/assetmantle.sh",
+        "axelar": "https://node101.io/mainnet/axelar.sh",
+        "canto": "https://node101.io/mainnet/assetmantle.sh",
+        "chihuahua": "https://node101.io/mainnet/chihuahua.sh",
+        "cosmoshub": "https://node101.io/mainnet/cosmoshub.sh",
+        "crescent": "https://node101.io/mainnet/crescent.sh",
+        "juno": "https://node101.io/mainnet/juno.sh",
+        "osmosis": "https://node101.io/mainnet/osmosis.sh",
+        "iris": "https://node101.io/mainnet/iris.sh",
+        "sommelier": "https://node101.io/mainnet/sommelier.sh",
+        "stride": "https://node101.io/mainnet/stride.sh",
+        "kujira": "https://node101.io/mainnet/kujira.sh",
+        "quicksilver": "https://node101.io/mainnet/quicksilver.sh"
+    }
 }
